--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -20,3 +20,11 @@ html,body,#app{
 .el-pagination{
     margin-top: 15px;
 }
+
+.shortInputForm {
+    width: 193px;
+}
+
+.longInputForm {
+    width: 580px;
+}
